# rules_lora

./: .bazelrc  CHANGELOG.md  INTERNAL.md  MODULE.bazel
docs/: hermetic-runners-roadmap.md
examples/corpus_smoke/: BUILD.bazel  raw_prompts.txt  transform.py
examples/smoke/: BUILD.bazel  sft.jsonl
lora/: defs.bzl
lora/backend/: BUILD.bazel
lora/private/: BUILD.bazel  providers.bzl  rules.bzl  toolchains.bzl
proto/: BUILD.bazel  lora.proto
runtime/local_runner/: BUILD.bazel  local_runner.sh  local_train.py
runtime/lora_merge/: BUILD.bazel  merge_run.py
runtime/runpod_orchestrator/: BUILD.bazel
runtime/runpod_orchestrator/src/: main.rs
runtime/torchtune_runner/: BUILD.bazel  render_recipe.py  validate_jsonl.py
