load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

# Folds a trained LoRA adapter into its base model and exports a
# standalone HF model dir (candle merge, CPU). Invoked by the `lora_merge`
# macro's `.run` py_binary (merge_run.py) via subprocess. The optional HF
# push uses the `hf` CLI.
rust_binary(
    name = "lora-merge",
    srcs = ["src/main.rs"],
    edition = "2021",
    deps = [
        "@crates//:anyhow",
        "@crates//:candle-core",
        "@crates//:clap",
        "@crates//:hf-hub",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

# Run entry for `lora_merge` — a py_binary orchestrator reading the merge
# config + subprocessing lora-merge. Instantiated per-target by the macro.
exports_files(["merge_run.py"])
